<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/Home"
            android:id="@+id/Home"
            android:icon="@drawable/home"/>
        <item
            android:id="@+id/add_sub"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/addsub" />
        <item
            android:id="@+id/only_sub"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/onlysub" />
        <item
            android:id="@+id/multiply"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/multiply" />
        <item
            android:id="@+id/ScalerMulti"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/ScalerMult" />
        <item
            android:id="@+id/AbsoluteVal"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/AbsoluteVal" />
        <item
            android:id="@+id/Swap"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/swap" />
        <item
            android:id="@+id/Clone"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/clone" />
        <item
            android:id="@+id/Transpose"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/transpose" />
        <item
            android:id="@+id/exponent"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/exponent" />
        <item
            android:id="@+id/determinant"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/determinant" />
        <item
            android:id="@+id/trace"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/trace_text" />
        <item
            android:id="@+id/inverse"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/inverse" />
        <item
            android:id="@+id/adjoint"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/adjoint" />

        <item
            android:id="@+id/RankofMat1"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/RankofMat"/>

        <item
            android:id="@+id/norm1"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/normOne"/>

        <item
            android:id="@+id/norm2"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/normTwo"/>

        <item
            android:id="@+id/normFrb"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/normFreb"/>

        <item
            android:id="@+id/normInf"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/normInfinity"/>

        <!--<item-->
            <!--android:id="@+id/RankofMat1"-->
            <!--android:icon="@drawable/ic_action_send_now"-->
            <!--android:title="@string/RankofMat"/>-->
        <item
            android:id="@+id/functional"
            android:icon="@drawable/ic_action_send_now"
            android:title="@string/function" />

    </group>
    <group android:id="@+id/helpcat">
        <item
            android:id="@+id/NewsAnnon"
            android:icon="@drawable/ic_action_event"
            android:title="@string/NewsUp"/>
        <item
            android:title="@string/direct_feedback"
            android:id="@+id/nav_report"
            android:visible="false"
            android:icon="@drawable/ic_action_warning"/>
        <item
            android:title="@string/LabelHelp"
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_action_good"/>
        <item
            android:title="@string/upgrade"
            android:id="@+id/upgrade"
            android:icon="@drawable/ic_action_favorite"/>
    </group>

    <!--</group>-->
    <!--<group android:id="@+id/helpcat">-->
        <!--<item-->
            <!--android:id="@+id/NewsAnnon"-->
            <!--android:icon="@drawable/ic_action_event"-->
            <!--android:title="@string/NewsUp"/>-->
        <!--<item-->
            <!--android:title="@string/direct_feedback"-->
            <!--android:id="@+id/nav_report"-->
            <!--android:visible="false"-->
            <!--android:icon="@drawable/ic_action_warning"/>-->
    <!--<item-->
        <!--android:title="@string/LabelHelp"-->
        <!--android:id="@+id/nav_help"-->
        <!--android:icon="@drawable/ic_action_good"/>-->
    <!--<item-->
        <!--android:title="@string/upgrade"-->
        <!--android:id="@+id/upgrade"-->
        <!--android:icon="@drawable/ic_action_favorite"/>-->
    <!--</group>-->

</menu>
