<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ClearAllVar"
        android:title="@string/clear"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:title="@string/aboutme"
        android:id="@+id/aboutmeButton"
        android:orderInCategory="1"/>
    <item
        android:orderInCategory="4"
        android:id="@+id/rateButton"
        android:title="@string/rate"
        />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="3"
        android:title="@string/share"
        app:showAsAction="never" />
</menu>
