<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/order_changer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.softminds.matrixcalculator.dialog_activity.OrderChanger">

    <LinearLayout
        android:id="@+id/RowChangerLayout"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:text="@string/Row"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <NumberPicker
            android:id="@+id/RowChangedOrder"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ColChangerLayout"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_toEndOf="@id/RowChangerLayout"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/Col"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <NumberPicker
            android:id="@+id/ColChangedOrder"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/WarningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RowChangerLayout"
        android:text="@string/Warning10" />

    <Button
        android:id="@+id/NoCommitChanges"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/WarningText"
        android:layout_marginStart="20dp"
        android:text="@string/CancelCustomFill" />

    <Button
        android:id="@+id/CommitChanges"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/WarningText"
        android:layout_marginStart="40dp"
        android:layout_toEndOf="@id/NoCommitChanges"
        android:text="@string/ConfirmMake" />
</RelativeLayout>

