<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/show_for_scalar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.softminds.matrixcalculator.dialog_activity.MultiplierSetter">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Mat5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/MultiplierSetterInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/MultiplierPlease"
            android:inputType="numberDecimal|numberSigned" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/ConfirmSetFillScalar"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/Mat5"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/ConfirmMake" />

    <Button
        android:id="@+id/CancelSetFillScalar"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/Mat5"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/CancelCustomFill" />
</RelativeLayout>
