<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_matrix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:paddingTop="16dp"
    tools:context="com.softminds.matrixcalculator.dialog_activity.MakeNewMatrix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Mat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/MatrixName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nameit" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="@string/Row"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <NumberPicker
                    android:id="@+id/RowOrder"
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="27dp"
                android:layout_toEndOf="@+id/linearLayout"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Col"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <NumberPicker
                    android:id="@+id/ColOrder"
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <Spinner
                android:id="@+id/MatType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="26sp"
                android:entries="@array/MatrixT" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/MatType"
                android:layout_alignBottom="@+id/MatType"
                android:layout_alignParentStart="true"
                android:layout_marginStart="36dp"
                android:layout_toStartOf="@id/MatType"
                android:text="@string/MatrixType"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/buttonMake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/NewMatrix" />

    </LinearLayout>
</ScrollView>
